--- a/src/app/edit-tally-history2/edit-tally-history2.component.html
+++ b/src/app/edit-tally-history2/edit-tally-history2.component.html
@@ -127,4 +127,6 @@
     
 </div>-->
 
+<app-modal [modalData]="dateAlreadyExistModalData" (parentEvent)="dateAlreadyExistConfirmed()"></app-modal>
+
 <app-modal [modalData]="cleanHistoryConfirmedModalData" (parentEvent)="cleanHistoryConfirmed()"></app-modal>
