--- a/src/app/history-summary/history-summary.component.html
+++ b/src/app/history-summary/history-summary.component.html
@@ -26,7 +26,7 @@
             <tr>
                 <td colspan="3">
                     <small *ngIf="tally.getHistory().length > 0">
-                        <a routerLink="/history/edit/{{tally.getUuid() }}">Hantera historik</a>
+                        <a routerLink="/history2/edit/{{tally.getUuid() }}">Hantera historik</a>
                     </small>
                 </td>
             </tr>
