--- a/src/app/edit-tally-history2/edit-tally-history2.component.html
+++ b/src/app/edit-tally-history2/edit-tally-history2.component.html
@@ -14,8 +14,8 @@
                     <div class="card-header">
                         {{ tally.getTitle() }}
                         <span>
-                            <button (click)="addHistory()"
-                                class="btn btn-sm btn-outline-success add-new-history pull-right">Lägg till</button>
+                            <div (click)="addHistory()"
+                                class="btn btn-sm btn-outline-success add-new-history pull-right">Lägg till</div>
                         </span>
                     </div>
                     <div class="card-block">
