--- a/src/app/edit-tally-history2/edit-tally-history2.component.scss
+++ b/src/app/edit-tally-history2/edit-tally-history2.component.scss
@@ -13,6 +13,9 @@
         }
     }
 }
+.required::after {     content: " *";     color: red; }  
+.form-control.ng-invalid {     border-bottom:.05rem solid red; }  
+
 input{
     width: 100%;
     border: none;
