--- a/src/app/edit-tally-history2/edit-tally-history2.component.scss
+++ b/src/app/edit-tally-history2/edit-tally-history2.component.scss
@@ -26,6 +26,7 @@ input {
     width: 100%;
     border: none;
     border-bottom: 0.05rem solid #0072a3;
+    min-height: 27px;
     &:focus {
         outline: none;
     }
