--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,8 @@
           <a routerLink="/add" clrDropdownItem>Lägg till ny räknare</a>
           <a routerLink="/example" clrDropdownItem>Lägg till exempel</a>
           <a (click)="clearCache()" clrDropdownItem>Rensa Local Storage</a>
+          <a routerLink="/gitlog" clrDropdownItem>Git Logs</a>
+          
         </clr-dropdown-menu>
       </clr-dropdown>
     </div>
