--- a/src/app/edit-tally-history2/edit-tally-history2.component.html
+++ b/src/app/edit-tally-history2/edit-tally-history2.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="clr-row">
-    <div class="clr-col-lg-5 clr-col-md-8 clr-col-12">
+    <div class="clr-col-12">
         <div class="card">
             <form class="container" [formGroup]="historyForm" (ngSubmit)="onSubmit()">
                 <div formArrayName="histories">
