--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
   <header class="header-6">
     <div class="branding">
       <a routerLink="/" class="nav-link">
-        <span class="title">Clear Results <small class="font-smaller">{{ appVersion.revision }}</small></span>
+        <span class="title">Clear Results <small class="appversion">{{ appVersion.revision }} {{ appVersion.date | date: 'd, MMMM hh:mm'  }}</small></span>
       </a>
     </div>
 
