--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,6 @@
 .appversion{
     font-size: 0.5rem;
-    padding-left: 15px;
+    margin-left: 10px;
+    padding: 5px;
+    border-bottom: .03em solid #4f8096;
 }
