--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,9 +48,9 @@
                 </div>
                 <div class="card-text">
                     <p><small>App version: {{ appVersion.version }}<br />
-                    App revision: {{ appVersion.revision }}<br />
+                    App revision: <a href="https://github.com/Jojjeboy/clearResults/commit/{{appVersion.revision}}">{{ appVersion.revision }}</a><br />
                     App branch: {{ appVersion.branch }}<br />
-                    Build date: {{ appVersion.date | date: 'd MMMM'  }}<br />
+                    Build date: {{ appVersion.date | date: 'd, MMMM hh:mm'  }}<br />
                   </small></p>
                 </div>
             </div>
