--- a/src/app/edit-tally-history/edit-tally-history.component.scss
+++ b/src/app/edit-tally-history/edit-tally-history.component.scss
@@ -1,50 +1,53 @@
 @import "./../../assets/styles/variables";
-
-.card-block {
-    form {
-        .clr-row {
-            margin-bottom: 10px;
-            padding-bottom: 10px;
-            border-bottom: 1px solid #cacaca;
-            position: relative;
-            &:last-child {
-                border-bottom: none;
-            }
-            label {
-                padding-left: 0;
-            }
-            input[type="date"],
-            input[type="datetime-local"] {
-                border: none;
-            }
-            input[type="number"] {
-                border: none;
-                width: inherit;
-                outline: none;
-            }
-
-            .clear-history {
-                padding-top: 20px;
-                text-align: center;
-                button {
-                    color: $dangerColor;
-                }
-            }
-            .action-history {
-                position: absolute;
-                right: 20px;
-                top: 20px;
-                .close {
-                    color: $dangerColor;
-                }
-                .add {
-                    color: #ccc;
-                    &.valid{
-                        color: $successColor;
-                    }
-                }
-
+.clr-row {
+    margin-bottom: 20px;
+    .clr-col-1 {
+        position: relative;
+        .action-history {
+            position: absolute;
+            right: 0px;
+            top: 20px;
+            .close {
+                color: $dangerColor;
             }
         }
     }
+}
+.required::after {
+    content: " *";
+    color: $dangerColor;
+}
+.form-control.ng-invalid {
+    border-bottom: 0.05rem solid $dangerColor;
+    color: $dangerColor;;
+}
+
+input {
+    width: 100%;
+    border: none;
+    border-bottom: 0.05rem solid #0072a3;
+    min-height: 27px;
+    &:focus {
+        outline: none;
+    }
+}
+input[type="date"] {
+    font-weight: 100;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: auto;
+    height: auto;
+    color: transparent;
+    background: transparent;
+}
+
+.btn.add-new-history {
+    margin-right: 0;
+    margin-top: 0;
 }
