upsert Reactive first

--- a/src/app/tally/tally.component.html
+++ b/src/app/tally/tally.component.html
@@ -80,7 +80,7 @@
 
 <div class="clr-row status">
     <div class="clr-col-12">
-        <a routerLink="/edit/{{ tally.getUuid() }}" class="btn btn-primary block">Redigera</a>
+        <a routerLink="/edit2/{{ tally.getUuid() }}" class="btn btn-primary block">Redigera</a>
     </div>
 </div>
 
