--- a/src/app/upsert-tally/upsert-tally.component.html
+++ b/src/app/upsert-tally/upsert-tally.component.html
@@ -1,54 +1,72 @@
+<div class="clr-row" *ngIf="editMode">
+    <div class="clr-col-12">
+        <a routerLink="/tally/{{ tally.getUuid() }}">
+            <clr-icon shape="undo"></clr-icon> &nbsp; <small>Tillbaka</small>
+        </a>
+    </div>
+</div>
+<h1>{{ editMode ? 'Redigera' : 'Skapa ny' }}</h1>
+
+
 <div class="card">
-    <form [formGroup]="tallyForm" clrForm class="clr-row">
+    <form [formGroup]="tallyForm" clrForm  (ngSubmit)="onSubmit()">
+
         <div class="card-block">
             <div class="card-text">
-                <div class="clr-col-12">
-                    <clr-input-container>
-                        <label for="title">Titel</label>
-                        <input clrInput type="text" id="title" formControlName="title" required />
-                        <clr-control-error>Här måste det finnas ett värde</clr-control-error>
-                    </clr-input-container>
+                <div class="clr-row">
+                    <div class="clr-col-12">
+                        <clr-input-container>
+                            <label for="title">Titel</label>
+                            <input clrInput type="text" id="title" formControlName="title" required />
+                            <clr-control-error>Här måste det finnas ett värde</clr-control-error>
+                        </clr-input-container>
+                    </div>
                 </div>
-                <div class="clr-col-6">
-                    <clr-input-container>
-                        <label for="increaseBy">Öka</label>
-                        <input clrInput type="number" placeholder="10" formControlName="increseBy" id="increseBy"
-                            required />
-                        <clr-control-error>Här måste det finnas ett värde</clr-control-error>
-                    </clr-input-container>
+                <div class="clr-row">
+                    <div class="clr-col-6">
+                        <clr-input-container>
+                            <label for="increaseBy">Öka</label>
+                            <input clrInput type="number" placeholder="10" formControlName="increseBy" id="increseBy"
+                                required />
+                            <clr-control-error>Här måste det finnas ett värde</clr-control-error>
+                        </clr-input-container>
+                    </div>
+                    <div class="clr-col-6">
+                        <clr-input-container>
+                            <label for="decreseBy">Minska</label>
+                            <input clrInput type="number" placeholder="10" formControlName="decreseBy" id="decreseBy"
+                                required />
+                            <clr-control-error>Här måste det finnas ett värde</clr-control-error>
+                        </clr-input-container>
+                    </div>
                 </div>
-                <div class="clr-col-6">
-                    <clr-input-container>
-                        <label for="decreseBy">Minska</label>
-                        <input clrInput type="number" placeholder="10" formControlName="decreseBy" id="decreseBy"
-                            required />
-                        <clr-control-error>Här måste det finnas ett värde</clr-control-error>
-                    </clr-input-container>
+                <div class="clr-row">
+                    <div class="clr-col-6">
+                        <clr-input-container>
+                            <label for="value">Värde</label>
+                            <input clrInput type="number" placeholder="0" formControlName="value" id="value" required />
+                            <clr-control-error>Här måste det finnas ett värde</clr-control-error>
+                        </clr-input-container>
+                    </div>
+                    <div class="clr-col-6">
+                        <clr-input-container>
+                            <label for="goal">Mål</label>
+                            <input clrInput type="number" placeholder="0" formControlName="goal" id="goal" required />
+                            <clr-control-error>Här måste det finnas ett värde</clr-control-error>
+                        </clr-input-container>
+                    </div>
                 </div>
-                <div class="clr-col-6">
-                    <clr-input-container>
-                        <label for="value">Värde</label>
-                        <input clrInput type="number" placeholder="0" formControlName="value" id="value" required />
-                        <clr-control-error>Här måste det finnas ett värde</clr-control-error>
-                    </clr-input-container>
+                <div class="clr-row">
+                    <div class="clr-col-6">
+                        <clr-input-container>
+                            <label for="topScore">Högsta värdet</label>
+                            <input clrInput type="number" placeholder="0" formControlName="topScore" id="topScore"
+                                required />
+                            <clr-control-error>Här måste det finnas ett värde</clr-control-error>
+                        </clr-input-container>
+                    </div>
+                    <div class="clr-col-6"></div>
                 </div>
-                <div class="clr-col-6">
-                    <clr-input-container>
-                        <label for="goal">Mål</label>
-                        <input clrInput type="number" placeholder="0" formControlName="goal" id="goal" required />
-                        <clr-control-error>Här måste det finnas ett värde</clr-control-error>
-                    </clr-input-container>
-                </div>
-
-                <div class="clr-col-6">
-                    <clr-input-container>
-                        <label for="topScore">Högsta värdet</label>
-                        <input clrInput type="number" placeholder="0" formControlName="topScore" id="topScore"
-                            required />
-                        <clr-control-error>Här måste det finnas ett värde</clr-control-error>
-                    </clr-input-container>
-                </div>
-                <div class="clr-col-6"></div>
 
 
                 <!--<div class="clr-col-6 resetEveryDay">
@@ -67,28 +85,36 @@
                             <label for="btn-demo-radio-4">Nej</label>
                         </div>
                     </div>-->
-
-                <div class="clr-col-12">
-                    <app-history-summary [tally]="tally"></app-history-summary>
+                <div class="clr-row">
+                    <div class="clr-col-12">
+                        <app-history-summary [tally]="tally"></app-history-summary>
+                    </div>
                 </div>
-
-                <div class="clr-col-12">
-                    <span class="success status-badge block" *ngIf="tally.getActive()" (click)="false">Aktiv</span>
-                    <span class="danger status-badge block" *ngIf="!tally.getActive()" (click)="false">Inaktiv</span>
+                <div class="clr-row">
+                    <div class="clr-col-12">
+                        <span class="success status-badge block" *ngIf="tally.getActive()" (click)="false">Aktiv</span>
+                        <span class="danger status-badge block" *ngIf="!tally.getActive()"
+                            (click)="false">Inaktiv</span>
+                    </div>
                 </div>
             </div>
         </div>
-
         <div class="card-footer">
             <div class="clr-row">
                 <div class="clr-col-6">
                     <a routerLink="/tally/{{ tally.getUuid() }}" class="btn btn-danger-outline block">Ångra</a>
                 </div>
                 <div class="clr-col-6">
-                    <button [disabled]="false" class="btn btn-success-outline block" (click)="false">{{ editMode ?
+                    <button [disabled]="!tallyForm.valid" class="btn btn-success-outline block" type="submit">{{
+                        editMode ?
                         'Uppdatera' : 'Spara' }}</button>
                 </div>
             </div>
         </div>
     </form>
 </div>
+
+
+<pre>
+    {{ tallyForm.value | json }}
+</pre>
