--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,3 +81,7 @@ a:active {
 header.header-6 {
     background-image: linear-gradient(to right,#00364d , #006d9c);
 }
+
+.clr-row input{
+    padding-left: 0;
+}
