Getting from ls if just added

--- a/src/app/tally-list/tally-list.component.html
+++ b/src/app/tally-list/tally-list.component.html
@@ -79,7 +79,7 @@
 
 <div class="clr-row add-row">
     <div class="clr-col-12">
-        <a routerLink="/add" class="btn btn-success block">Skapa ny</a>
+        <a routerLink="/add2" class="btn btn-success block">Skapa ny</a>
     </div>
 </div>
 
