--- a/src/app/tally/tally.component.html
+++ b/src/app/tally/tally.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <h1>{{ tally.getTitle() }}</h1>
-<div>
+<div *ngIf="tally.getLastTouched()">
     <small>{{ tally.getLastTouched() | timeago }}</small>
 </div>
 
