--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,3 +85,12 @@ header.header-6 {
 .clr-row input{
     padding-left: 0;
 }
+
+.required::after {
+    content: " *";
+    color: $dangerColor;
+}
+.form-control.ng-invalid {
+    border-bottom: 0.05rem solid $dangerColor;
+    color: $dangerColor;;
+}
