--- a/src/app/tally-list/tally-list.component.html
+++ b/src/app/tally-list/tally-list.component.html
@@ -90,7 +90,7 @@
                 <div class="clr-toggle-wrapper">
                     <input type="checkbox" id="toggle1" name="toggle-basic" [(ngModel)]="showAll"
                         (change)="eventCheck($event)" class="clr-toggle" />
-                    <label for="toggle1">{{ showAll ? 'Dölj inaktiva' : 'Visa inaktiva' }}</label>
+                    <label for="toggle1">{{ showAll ? 'Visa inaktiva' : 'Dölj inaktiva' }}</label>
                 </div>
             </div>
         </div>
