--- a/src/app/tally-list/tally-list.component.scss
+++ b/src/app/tally-list/tally-list.component.scss
@@ -4,10 +4,10 @@
     &.clear-spinner {
         text-align: center;
     }
-    .inactive{
+    &.inactive{
         opacity: 0.5;
     }
-    .hideInactive {
+    &.hideInactive {
         display: none;
     }
 }
