--- a/src/app/upsert-tally/upsert-tally.component.html
+++ b/src/app/upsert-tally/upsert-tally.component.html
@@ -9,7 +9,7 @@
 
 
 <div class="card">
-    <form [formGroup]="tallyForm" clrForm  (ngSubmit)="onSubmit()">
+    <form [formGroup]="tallyForm" clrForm (ngSubmit)="onSubmit()">
         <div class="card-block">
             <div class="card-text">
                 <div class="clr-row">
@@ -25,16 +25,16 @@
                     <div class="clr-col-6">
                         <clr-input-container>
                             <label for="increaseBy">Öka</label>
-                            <input clrInput min="1" step="1" type="number" placeholder="10" formControlName="increseBy" id="increseBy"
-                                required />
+                            <input clrInput min="1" step="1" type="number" placeholder="10" formControlName="increseBy"
+                                id="increseBy" required />
                             <clr-control-error>Här måste det finnas ett värde</clr-control-error>
                         </clr-input-container>
                     </div>
                     <div class="clr-col-6">
                         <clr-input-container>
                             <label for="decreseBy">Minska</label>
-                            <input clrInput min="1" step="1" type="number" placeholder="10" formControlName="decreseBy" id="decreseBy"
-                                required />
+                            <input clrInput min="1" step="1" type="number" placeholder="10" formControlName="decreseBy"
+                                id="decreseBy" required />
                             <clr-control-error>Här måste det finnas ett värde</clr-control-error>
                         </clr-input-container>
                     </div>
@@ -43,14 +43,16 @@
                     <div class="clr-col-6">
                         <clr-input-container>
                             <label for="value">Värde</label>
-                            <input clrInput min="0" type="number" placeholder="0" formControlName="value" id="value" required />
+                            <input clrInput min="0" type="number" placeholder="0" formControlName="value" id="value"
+                                required />
                             <clr-control-error>Här måste det finnas ett värde</clr-control-error>
                         </clr-input-container>
                     </div>
                     <div class="clr-col-6">
                         <clr-input-container>
                             <label for="goal">Mål</label>
-                            <input clrInput min="0" type="number" placeholder="0" formControlName="goal" id="goal" required />
+                            <input clrInput min="0" type="number" placeholder="0" formControlName="goal" id="goal"
+                                required />
                             <clr-control-error>Här måste det finnas ett värde</clr-control-error>
                         </clr-input-container>
                     </div>
@@ -59,28 +61,29 @@
                     <div class="clr-col-6">
                         <clr-input-container>
                             <label for="topScore">Högsta värdet</label>
-                            <input clrInput min="0" type="number" placeholder="0" formControlName="topScore" id="topScore"
-                                required />
+                            <input clrInput min="0" type="number" placeholder="0" formControlName="topScore"
+                                id="topScore" required />
                             <clr-control-error>Här måste det finnas ett värde</clr-control-error>
                         </clr-input-container>
                     </div>
                     <div class="clr-col-6"></div>
                 </div>
 
-                
+
                 <div class="clr-row">
                     <div class="clr-col-6 resetEveryDay">
                         <span>Nollställ varje dag</span>
                         <div class="radio btn">
-                            <input type="radio"
-                            formControlName="resetEveryDay" value="true" id="btn-demo-radio-1" [value]="true">
+                            <input type="radio" formControlName="resetEveryDay" value="true" id="btn-demo-radio-1"
+                                [value]="true">
                             <label for="btn-demo-radio-1">Ja</label>
                         </div>
                     </div>
                     <div class="clr-col-6 resetEveryDay">
                         <span>&nbsp;</span>
                         <div class="radio btn">
-                            <input type="radio" formControlName="resetEveryDay" value="false" id="btn-demo-radio-4" [value]="false">
+                            <input type="radio" formControlName="resetEveryDay" value="false" id="btn-demo-radio-4"
+                                [value]="false">
                             <label for="btn-demo-radio-4">Nej</label>
                         </div>
                     </div>
@@ -91,10 +94,9 @@
                     </div>
                 </div>
                 <div class="clr-row">
+                    <label>Räknaren är {{ tallyForm.value.active  ? 'aktiv' : 'inaktiv' }}</label>
                     <div class="clr-col-12">
-                        <span class="success status-badge block" *ngIf="tally.getActive()" (click)="false">Aktiv</span>
-                        <span class="danger status-badge block" *ngIf="!tally.getActive()"
-                            (click)="false">Inaktiv</span>
+                        <input type="checkbox" value="tally.getActive()" formControlName="active" clrToggle />
                     </div>
                 </div>
             </div>
