--- a/src/app/tally-list/tally-list.component.html
+++ b/src/app/tally-list/tally-list.component.html
@@ -14,8 +14,8 @@
                     <div class="header-main-text">
                         <a routerLink="/tally/{{ tally.getUuid() }}" class="block">{{ tally.getTitle() }}</a>
                         <span class="pull-right" *ngIf="tally.getResetEveryday()">
+                            <clr-icon shape="crosshairs" *ngIf="tally.getHistory().length > 2"></clr-icon>  &nbsp; 
                             <clr-icon shape="recycle"></clr-icon>
-
                         </span>
                     </div>
                     <div class="pull-right header-meta-text">
@@ -37,8 +37,15 @@
                     <div class="card-text">
                         <div aria-hidden="true" class="clr-row progress-status-text">
                             <div class="clr-col-6">Avklarat: {{ calculatePercentage(tally) }}% </div>
-                            <div class="clr-col-6"><span class="pull-right"> {{ tally.getValue() }} av {{
-                                    tally.getGoal() }} </span> </div>
+                            <div class="clr-col-6">
+                                <span class="pull-right">
+                                    {{ tally.getValue() }} av {{ tally.getGoal() }}
+                                </span>
+                            </div>
+                        </div>
+                        <div class="clr-row dynamic-goal" *ngIf="showDynamicGoal(tally)">
+                            <div class="clr-col-6">Dynamiskt mål idag: {{ getDynamicTallyGoal(tally.getHistory()) }} </div>
+                            <div class="clr-col-6"></div>
                         </div>
                         <div class="progress-static" [class.success]="tally.getValue() >= tally.getGoal()">
                             <div class="progress-meter"
