--- a/src/app/tally/components/list/list.component.html
+++ b/src/app/tally/components/list/list.component.html
@@ -100,7 +100,7 @@
                 <div class="clr-toggle-wrapper">
                     <input type="checkbox" id="toggle1" name="toggle-basic" [(ngModel)]="showAll"
                         (change)="eventCheck($event)" class="clr-toggle" />
-                    <label for="toggle1">{{ showAll ? 'Visa inaktiva' : 'Dölj inaktiva' }}</label>
+                    <label for="toggle1">Visa inaktiva</label>
                 </div>
             </div>
         </div>
