--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,7 @@
 <div class="main-container">
 
   <!-- Alert -->
-  <div class="alert alert-app-level alert-{{ alertType }}" *ngIf="showAlert">
-    <div class="alert-items">
-      <div class="alert-item static">
-        <div class="alert-icon-wrapper">
-          <clr-icon class="alert-icon" shape="info-circle"></clr-icon>
-        </div>
-        <div class="alert-text">
-          {{ alertText }}
-        </div>
-      </div>
-    </div>
-  </div>
+  <alert [text]="'alertTexttest'" [type]="'alertType'" [showalert]="true"></alert>
 
   <!-- Header -->
   <header class="header-6">
@@ -37,7 +26,7 @@
         </clr-dropdown-menu>
       </clr-dropdown>
     </div>
-  </header>
+  </header> 
 
   
   <!-- Main content -->
