--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
 
   <!-- Alert -->
-  <alert [text]="'alertTexttest'" [type]="'alertType'" [showalert]="true"></alert>
+  <alert [text]="alertText" [type]="alertType" [showalert]="showAlert"></alert>
 
   <!-- Header -->
   <header class="header-6">
